--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "2e4fa0eb",
    "metadata": {},
    "source": [
-    "# KPMG AU Data Analytics Module 2  Data Insights"
+    "# KPMG AU Data Analytics"
    ]
   },
   {
