--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -10542,12 +10542,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "205e1e5f",
+   "cell_type": "markdown",
+   "id": "a58e1ced",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "157a9699",
+   "metadata": {},
+   "source": [
+    "Current high value customers are:\n",
+    "\n",
+    "- Aged between 40 – 50 with slightly more females than males.\n",
+    "- Currently living in New South Wales\n",
+    "- Mass customers\n",
+    "- Working in Manufacturing, Financial Service, and Health\n",
+    "\n",
+    "Random Forest or Gradient Boost show slightly better performance. All models developed have low ROC-AUC score. The features available in the datasets may not be sufficient to train the model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d66a35c",
+   "metadata": {},
+   "source": [
+    "## Next Actions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b2ce4e1e",
+   "metadata": {},
+   "source": [
+    "- Consider to add in new features (e.g. distance from home to office) to improve the training of the model.\n",
+    "\n",
+    "- Try other sampling methods to handle the imbalanced dataset.\n",
+    "\n",
+    "- Perform hyper-tuning to optimize the parameters to improve the score."
+   ]
   }
  ],
  "metadata": {
